--- a/css/style.css
+++ b/css/style.css
@@ -10,4 +10,15 @@
 .center {
   text-align: center; }
 
+.button-1 {
+  display: inline-block;
+  padding: 5px 10px; }
+
+.section_padding {
+  padding: 25px 0px; }
+
+@media only screen and (min-width: 992px) {
+  .section_padding {
+    padding: 25px 0px; } }
+
 /*# sourceMappingURL=style.css.map */
