--- a/css/style.scss
+++ b/css/style.scss
@@ -16,9 +16,11 @@
 .button-1{
 	display: inline-block;
 	padding: 5px 10px;
-	
-}
 
+}
+.section_padding{
+	padding: 25px 0px;
+}
 
 @media only screen and (min-width : 320px) {
 }
@@ -30,6 +32,9 @@
 }
 
 @media only screen and (min-width : 992px) {
+	.section_padding{
+		padding: 55px 0px;
+	}
 }
 
 @media only screen and (min-width : 1248px) {
