--- a/css/style.scss
+++ b/css/style.scss
@@ -15,10 +15,28 @@
 
 .button-1{
 	display: inline-block;
-	padding: 5px 10px;
-	
+	padding: 5px 10px;	
 }
-
+h2{
+	font-size: 35px;
+	color:#292929;
+	font-family: "RobotoRegular";
+	text-align: center;
+}
+input[type="submit"]{
+	font-size: 17px;
+	color:#c30005;
+	font-family: "RobotoRegular";
+	border: 1px solid #c30005;
+	padding: 5px 25px;
+}
+input[type="text"]{
+	font-size: 16px;
+	color: #999898;
+	font-family: "RobotoRegular";
+	border: 1px solid #fff;
+	padding: 12px 12px;
+}
 
 @media only screen and (min-width : 320px) {
 }
