--- a/css/style5.scss
+++ b/css/style5.scss
@@ -1,9 +1,6 @@
-@import "reset.css";
-@import "style.css";
-@import "style2.css";
-@import "style3.css";
-@import "style4.css";
-@import "fonts.css";
+.clear{
+	clear: both;
+}
 
 @media only screen and (min-width : 320px) {
 }
