--- a/css/style5.css
+++ b/css/style5.css
@@ -1,2 +1,2 @@
-.clear{clear:both}
+.clear{clear:both}.df-cap{color:#fff}.df-toptext{line-height:30px;font-size:20px;color:#fff;font-family:"RobotoLight"}
 /*# sourceMappingURL=style5.css.map */
