--- a/css/style5.scss
+++ b/css/style5.scss
@@ -2,6 +2,17 @@
 	clear: both;
 }
 
+/*treners*/
+
+.df-cap{
+	color:#fff;
+}
+.df-toptext{
+	line-height: 30px;
+	font-size: 20px;
+	color:#fff;
+	font-family: "RobotoLight";
+}
 @media only screen and (min-width : 320px) {
 }
 
