--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,2 @@
-@import url(reset.css);
-@import url(style2.css);
-@import url(style3.css);
-@import url(style4.css);
-@import url(style5.css);
-@import url(fonts.css);
-.clear {
-  clear: both; }
-
-.center {
-  text-align: center; }
-
+@import url(reset.css);@import url(style2.css);@import url(style3.css);@import url(style4.css);@import url(style5.css);@import url(fonts.css);.clear{clear:both}.center{text-align:center}.button-1{display:inline-block;padding:5px 10px}h2{display:inline-block;font-size:30px;font-family:"RobotoRegular";text-transform:uppercase;padding-top:55px}
 /*# sourceMappingURL=style.css.map */
