--- a/css/style.scss
+++ b/css/style.scss
@@ -19,6 +19,14 @@
 	
 }
 
+h2{
+	display:inline-block;
+	font-size: 30px;
+	font-family: "RobotoRegular";
+	text-transform:uppercase;
+	padding-top: 55px;	
+}
+
 
 @media only screen and (min-width : 320px) {
 }
