--- a/css/style3.css
+++ b/css/style3.css
@@ -1,7 +1,2 @@
-@import url(reset.css);
-@import url(style2.css);
-@import url(style3.css);
-@import url(style4.css);
-@import url(fonts.css);
-
+@import url(reset.css);@import url(style.css);@import url(style2.css);@import url(style3.css);@import url(style4.css);@import url(fonts.css);.tornado__about_text{padding-bottom:30px;font-family:"RobotoLight";text-align:justify;padding-left:12%;padding-right:12%}.section_padding-dc_view{text-align:center}.section_padding-dc_view h2{padding-bottom:35px}
 /*# sourceMappingURL=style3.css.map */
