--- a/css/style5.scss
+++ b/css/style5.scss
@@ -13,6 +13,7 @@
 }
 .df-cap{
 	color:#fff;
+	letter-spacing: -0.2px;
 }
 .df-toptext{
 	line-height: 30px;
@@ -20,19 +21,19 @@
 	color:#fff;
 	font-family: "RobotoLight";
 	text-align: center;
-	padding: 20px 0;
+	padding: 20px 0;	
 }
 .df-treners_view{
 	text-align: center;
+	margin-left: -13px;	
 }
 .df-treners__block_view{
 	max-width: 175px;
 	width: 100%;
 	display: inline-block;
 	vertical-align: top;
-	margin-bottom: 15px;	
+	margin-bottom: 15px;
 }
-
 .df-treners__img_view a{
 	display: inline-block;
 	max-width: 136px;
@@ -47,7 +48,6 @@
 		display: inline-block;		
 	}
 }
-
 .df-treners__block_view:hover{
 	transition: background 0.5s;
 	.df-treners__img_view a:before{
@@ -101,7 +101,10 @@
 	}
 	.df-treners__block_view{		
 		margin-bottom: 0px;	
-		margin-right: -13px;
+		margin-right: -13px;		
+	}
+	.df-toptext{		
+		padding: 17px 35px 33px 60px;
 	}
 }
 
