--- a/css/fonts.css
+++ b/css/fonts.css
@@ -1,4 +1,13 @@
 @font-face {
+    font-family: "RobotoThin";
+    src: url("../fonts/RobotoRegular/RobotoRegular.eot");
+    src: url("../fonts/RobotoRegular/RobotoRegular.eot?#iefix")format("embedded-opentype"),
+    url("../fonts/RobotoRegular/RobotoRegular.woff") format("woff"),
+    url("../fonts/RobotoRegular/RobotoRegular.ttf") format("truetype");
+    font-style: normal;
+    font-weight: normal;
+}
+@font-face {
     font-family: "RobotoRegular";
     src: url("../fonts/RobotoRegular/RobotoRegular.eot");
     src: url("../fonts/RobotoRegular/RobotoRegular.eot?#iefix")format("embedded-opentype"),
