--- a/css/style5.scss
+++ b/css/style5.scss
@@ -3,16 +3,89 @@
 }
 
 /*treners*/
-
+.df-bg-section{
+	background-image: url("../img/df-bg.jpg");
+	background-repeat: no-repeat;
+	background-position: top center;
+	background-size: cover;
+	// padding: 53px 0 63px 0;
+	padding: 25px 0 25px 0;
+}
 .df-cap{
 	color:#fff;
+	letter-spacing: -0.2px;
 }
 .df-toptext{
 	line-height: 30px;
 	font-size: 20px;
 	color:#fff;
 	font-family: "RobotoLight";
+	text-align: center;
+	padding: 20px 0;	
 }
+.df-treners_view{
+	text-align: center;
+	margin-left: -13px;	
+}
+.df-treners__block_view{
+	max-width: 175px;
+	width: 100%;
+	display: inline-block;
+	vertical-align: top;
+	margin-bottom: 15px;
+}
+.df-treners__img_view a{
+	display: inline-block;
+	max-width: 136px;
+	width: 100%;
+	height: 210px;
+	margin: 0 auto;	
+	position: relative;
+	transition: background 0.9s;
+	img{
+		width: 100%;
+		height: auto;
+		display: inline-block;		
+	}
+}
+.df-treners__block_view:hover{
+	transition: background 0.5s;
+	.df-treners__img_view a:before{
+		content: "";
+		position: absolute;
+		width: 100%;
+		height: 100%;
+		top:0;
+		left: 0;
+		background: #020000;
+		opacity: 0.4;
+		transition: background 0.9s;	
+	}
+}
+.df-treners__link_view{
+	font-size: 16px;
+	color:#fff;
+	line-height: 20px;
+	display: inline-block;
+	text-decoration: underline;
+	font-family: "RobotoLight";
+	transition:0.5s;
+	margin-top: 7px;
+}
+.df-treners__link_view:hover{
+	color:#e6e035;
+	text-decoration: none;
+	transition:0.5s;
+}
+
+
+
+
+
+
+
+
+
 @media only screen and (min-width : 320px) {
 }
 
@@ -23,6 +96,16 @@
 }
 
 @media only screen and (min-width : 992px) {
+	.df-bg-section{		
+		padding: 53px 0 63px 0;
+	}
+	.df-treners__block_view{		
+		margin-bottom: 0px;	
+		margin-right: -13px;		
+	}
+	.df-toptext{		
+		padding: 17px 35px 33px 60px;
+	}
 }
 
 @media only screen and (min-width : 1248px) {
