--- a/css/style4.scss
+++ b/css/style4.scss
@@ -1,9 +1,89 @@
-@import "reset.css";
-@import "style.css";
-@import "style2.css";
-@import "style3.css";
-@import "style4.css";
-@import "fonts.css";
+
+/* Top header
+==============================*/
+
+.dd-top-header{
+	padding: 21px 0px;
+}
+.dd-logo{
+	text-align:center;
+}
+.dd-social-table{
+	display: table;
+	margin: 0 auto;
+	.dd-icon{
+		display: table-cell;
+		padding-left: 21px;
+	}
+}
+.dd-social{
+	padding-top: 30px;
+}
+.dd-number{
+	padding-top: 20px;
+	text-align:center;
+	span{
+		display: inline-block;
+		background: url(../img/call.png) no-repeat left center;
+		font-family: "RobotoMedium";
+		font-size: 28px;
+		color: #c30005;
+		padding-left: 38px;
+	}
+}
+
+// Меню
+.dd-main-menu-wrap{
+	background: url(../img/mbg.jpg) no-repeat top center;
+	width: 100%;
+	background-size: cover;
+}
+.dd-menu-container{
+	li{
+		display: inline-block;
+		padding-left: 24px;
+		.dd-main-style{
+			padding: 13px 61px 13px 10px;
+			font-family: "RobotoRegular";
+			color:#fff;
+			font-size: 16px;
+			display: inline-block;
+			transition: all 0.7s;
+		}
+		.dd-main-style:hover{
+			background: #FDEC04;
+			color:black;
+		}
+		.dd-last{
+			padding: 13px 10px 13px 30px;
+		}
+	}
+	.no-padding{
+		padding-left: 0px;
+	}
+}
+
+// sub-menu
+.dd-sub-menu{
+	position: absolute;
+	background:#fff;
+	border:1px solid #BFBFBF;
+	li{
+		display: block;
+		a{
+			font-size: 16px;
+			display: inline-block;
+			color: #292929;
+			font-family: "RobotoLight";
+		}
+	}
+}
+
+
+
+
+
+
 
 @media only screen and (min-width : 320px) {
 }
@@ -15,6 +95,12 @@
 }
 
 @media only screen and (min-width : 992px) {
+	.dd-logo{
+		text-align:left;
+	}
+	.dd-number{
+		text-align:right;
+	}
 }
 
 @media only screen and (min-width : 1248px) {
@@ -24,7 +110,7 @@
     //outline: 5px solid red;
 }
 .col-xs-1, .col-xs-2, .col-xs-3, .col-xs-4, .col-xs-5, .col-xs-6, .col-xs-7, .col-xs-8, .col-xs-9, .col-xs-10, .col-xs-11, .col-xs-12 {
-  
+
 }
 .col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12 {
 }
