--- a/css/style3.scss
+++ b/css/style3.scss
@@ -9,11 +9,22 @@
 	padding-bottom: 30px;
 	font-family: "RobotoLight";
 	text-align: justify;
-	padding-left: 12%;
-	padding-right: 12%;
+	padding-left: 8%;
+	padding-right: 8%;
+	font-size: 14px;
 }
 
-.section_padding-dc_view {
+.tornado__about_title {
+	padding-bottom: 30px;
+	color: #292929;
+	font-family: "RobotoRegular";
+	font-size: 30px;
+	font-weight: 400;
+	line-height: 30px;
+}
+
+
+.section_padding-dc_view1 {
 	text-align: center;
     h2 {
 		display:inline-block;
@@ -23,9 +34,46 @@
 		padding-top: 55px;
     	padding-bottom: 35px;
     }
+    background: url("../img/dc-bg.jpg") no-repeat;
+    height: 215px;
+}
+
+.db-left {
+	width: 31px;
+	height: 68px;
+	display: block;
+	background: url('../img/dc-arrow-left.png') no-repeat;
+	position: absolute;
+	top: 40%;
+    left: 5px;
+}
+
+.db-right {
+	width: 31px;
+	height: 68px;
+	display: block;
+	background: url('../img/dc-arrow-right.png') no-repeat;
+	position: absolute;
+	right: -5px;
+    top: 40%;
+}
+
+.logos__slider {
+	padding-left: 8%;
+    padding-right: 8%;
+}
+
+.logos__slider_padding {
+    padding-top: 30px;
+    padding-left: 10px;
+    padding-right: 10px;
+    width: 152px;
+    height: auto;
+	padding-top: 40px;    
 }
 
 @media only screen and (min-width : 320px) {
+
 }
 
 @media only screen and (min-width : 480px) {
@@ -35,6 +83,50 @@
 }
 
 @media only screen and (min-width : 992px) {
+	.section_padding-dc_view1 {
+		text-align: center;
+	    h2 {
+			display:inline-block;
+			font-size: 30px;
+			font-family: "RobotoRegular";
+			text-transform:uppercase;
+			padding-top: 55px;
+	    	padding-bottom: 35px;
+	    }
+	    background: url("../img/dc-bg.jpg") no-repeat;
+	    height: 215px;
+	}
+
+	.db-left {
+		width: 31px;
+		height: 68px;
+		display: block;
+		background: url('../img/dc-arrow-left.png') no-repeat;
+		position: absolute;
+		top: 45%;
+	    left: 50px;
+	}
+
+	.db-right {
+		width: 31px;
+		height: 68px;
+		display: block;
+		background: url('../img/dc-arrow-right.png') no-repeat;
+		position: absolute;
+		right: 50px;
+	    top: 45%;
+	}
+
+	.logos__slider {
+		padding-left: 8%;
+	    padding-right: 8%;	    
+	}
+
+	.logos__slider_padding {
+		padding-top: 40px;
+        width: 152px;
+        height: auto;
+	}
 }
 
 @media only screen and (min-width : 1248px) {
