--- a/css/style3.scss
+++ b/css/style3.scss
@@ -64,12 +64,11 @@
 }
 
 .logos__slider_padding {
-    padding-top: 30px;
     padding-left: 10px;
     padding-right: 10px;
     width: 152px;
     height: auto;
-	padding-top: 40px;    
+	padding-top: 20px !important;
 }
 
 @media only screen and (min-width : 320px) {
@@ -123,7 +122,7 @@
 	}
 
 	.logos__slider_padding {
-		padding-top: 40px;
+		padding-top: 20px !important;
         width: 152px;
         height: auto;
 	}
