--- a/css/style.scss
+++ b/css/style.scss
@@ -32,6 +32,7 @@ input[type="submit"]{
 	font-family: "RobotoRegular";
 	border: 2px solid #c30005;
 	padding: 5px 25px;
+	background-color: #fff;
 }
 input[type="text"]{
 	font-size: 16px;
@@ -39,6 +40,7 @@ input[type="text"]{
 	font-family: "RobotoRegular";
 	border: 1px solid #fff;
 	padding: 12px 12px;
+
 }
 
 
