--- a/css/style5.scss
+++ b/css/style5.scss
@@ -1,14 +1,16 @@
 .clear{
 	clear: both;
 }
+a:active, a:focus{
+	outline: none;
+}
 
 /*treners*/
 .df-bg-section{
 	background-image: url("../img/df-bg.jpg");
 	background-repeat: no-repeat;
 	background-position: top center;
-	background-size: cover;
-	// padding: 53px 0 63px 0;
+	background-size: cover;	
 	padding: 25px 0 25px 0;
 }
 .df-cap{
@@ -66,11 +68,13 @@
 	font-size: 16px;
 	color:#fff;
 	line-height: 20px;
+	margin-top: 7px;
+	padding: 0px 2px;
 	display: inline-block;
 	text-decoration: underline;
 	font-family: "RobotoLight";
 	transition:0.5s;
-	margin-top: 7px;
+
 }
 .df-treners__link_view:hover{
 	color:#e6e035;
@@ -81,31 +85,38 @@
 
 
 /*============calendar===========*/
+
+
 .df-bg-section2{
 	background-color: #f0f0ef;
-	padding: 53px 0 59px 0; 
+	padding: 20px 0 35px 0 !important; 
 }
 .df-calendar_view{
 	text-align: center;
+	padding: 0px;
 }
 .df-calendar__links_view{
 	text-align:center;
-	margin: 31px 0 13px 0;	
+	margin: 31px 0 13px 0;		
 	a{
-		display: inline-block;
+		display: inline-block;		
 		text-align: center;
 		font-family: "RobotoRegular";		
-		// width: 49.7%;
 		width: 100%;
 		line-height: 30px;
 		font-size: 20px;
 		color:#292929;
 		background: #fff;
+		padding: 3px 0;
+		margin-bottom: 10px;
 	}
 }
-.df-calendar__events_view{
-	// text-align: left;
+.df-calendar__events_view{	
 	text-align: center;
+	margin-top: 13px;	
+}
+#df-tab2{
+	display: none;
 }
 .df-calendar__textbox_view{
 	background: #fff;
@@ -119,11 +130,12 @@
 	color:#fff;
 	line-height: 30px;
 	background: #111111;
-	width: 101px;
-	padding: 2px 0;
-	text-align: center;
-	transition:0.5s;
+	width: 101px;	
 	margin-bottom: 5px;
+	padding: 3px 0 5px 10px;
+	text-align: left;
+	transition:0.5s;
+
 }
 .df-right_view{
 	font-family: "RobotoLight";	
@@ -146,14 +158,18 @@
 		transition:0.5s;		
 	}
 }
-
 .df-input-calendar{
 	display: inline-block;
-	margin-top: 30px;
+	margin-top: 22px;
 	background: #fff;
+	padding: 5px 13px !important;
+	letter-spacing: -0.3px;
+	margin-right: 4px;
 }
-
-
+.df-active{
+	color:#c30005 !important;
+	background: #e2e2e2 !important;
+}
 
 @media only screen and (min-width : 320px) {
 }
@@ -177,8 +193,17 @@
 	}
 
 	/*calendar*/
+	.df-bg-section2{		
+		padding: 41px 0 75px 0 !important; 
+	}
 	.df-calendar__links_view a{						
-		width: 49.7%;		
+		max-width: 487px;
+		width: 100%;		
+		float: left;
+		margin-bottom: 0px;	
+	}
+	.df-calendar_view{		
+		padding: 0 82px;
 	}
 	.df-calendar__events_view{
 		text-align: left;	
