--- a/css/style.scss
+++ b/css/style.scss
@@ -33,6 +33,12 @@ input[type="submit"]{
 	border: 2px solid #c30005;
 	padding: 5px 25px;
 	background-color: #fff;
+	transition:0.5s;
+}
+input[type="submit"]:hover{
+	background: #c30005;
+	color:#fff;
+	transition:0.5s;
 }
 input[type="text"]{
 	font-size: 16px;
