--- a/css/style5.scss
+++ b/css/style5.scss
@@ -178,7 +178,7 @@ a:active, a:focus{
 /*===========slider================*/
 .df-section{
 	position: relative;	
-}
+
 .df-img-slider{	
 	width: 100%;
 	max-height: 470px;
@@ -221,10 +221,9 @@ a:active, a:focus{
 		height: 22px;
 		border-radius: 50%;
 		background: #cecece;		
-	}
-	
+	}	
 }
-
+}
 
 
 @media only screen and (min-width : 320px) {
@@ -234,8 +233,10 @@ a:active, a:focus{
 }
 
 @media only screen and (min-width : 768px) {
-	.df-slider_view{	
-		font-size: 20px;
+	.df-section{
+		.df-slider_view{		
+			font-size: 20px;			
+		}
 	}
 }
 
@@ -278,9 +279,11 @@ a:active, a:focus{
 		max-width: 850px;
 	}
 	/*slider*/
-	.df-slider_view{		
-		font-size: 25px;
-		line-height: 30px;
+	.df-section{
+		.df-slider_view{		
+			font-size: 25px;
+			line-height: 30px;
+		}
 	}
 }
 
