--- a/css/style3.scss
+++ b/css/style3.scss
@@ -1,9 +1,3 @@
-@import "reset.css";
-@import "style.css";
-@import "style2.css";
-@import "style3.css";
-@import "style4.css";
-@import "fonts.css";
 
 .tornado__about_text {
 	padding-bottom: 30px;
@@ -34,8 +28,10 @@
 		padding-top: 55px;
     	padding-bottom: 35px;
     }
-    background: url("../img/dc-bg.jpg") no-repeat;
+    background: url("../img/dc-bg.jpg") no-repeat top center;
     height: 215px;
+    width: 100%;
+    background-size: cover;
 }
 
 .db-left {
@@ -71,6 +67,39 @@
 	padding-top: 20px !important;
 }
 
+
+.db-left1 {
+	width: 23px;
+	height: 43px;
+	display: block;
+	background: url('../img/dc-arrow-back.png') no-repeat;
+	position: absolute;
+    left: -30px;
+	top: 30%;
+}
+
+.db-right1 {
+	width: 23px;
+	height: 43px;
+	display: block;
+	background: url('../img/dc-arrow-forward.png') no-repeat;
+	position: absolute;
+	right: -30px;
+    top: 30%;
+}
+
+.tornado__gyms_slider {
+	.item {
+        margin-left: 17px;
+        margin-right: 17px;
+	}
+}
+
+.tornado__gyms_title {
+	font-family: "RobotoRegular";
+	font-size: 35px;
+}
+
 @media only screen and (min-width : 320px) {
 
 }
@@ -92,8 +121,10 @@
 			padding-top: 55px;
 	    	padding-bottom: 35px;
 	    }
-	    background: url("../img/dc-bg.jpg") no-repeat;
+	    background: url("../img/dc-bg.jpg") no-repeat top center;
 	    height: 215px;
+	    width: 100%;
+        background-size: cover;
 	}
 
 	.db-left {
