--- a/css/style2.scss
+++ b/css/style2.scss
@@ -1,4 +1,5 @@
 .section-db-zapis{
+	text-align: center;
 	background: url("../img/db-fon-zapis.jpg") no-repeat;
 	background-size: cover;
 	input[type="text"]{
