--- a/css/style3.scss
+++ b/css/style3.scss
@@ -234,6 +234,7 @@
         height: auto;
 	}
 
+
 	.db-left1 {
 		width: 23px;
 		height: 43px;
@@ -298,7 +299,8 @@
 	.tornado__gyms_slider_link {
 	    display: none;
 	    position: absolute;
-	    left: 115px;
+	    left: 50%;
+	    transform: translate(-50%);
 	    top: 100px;
 	}
 
@@ -340,8 +342,6 @@
 		left: 0;
 		z-index: 10;
 	}
-
-
 }
 
 @media only screen and (min-width : 1248px) {
