--- a/css/style3.scss
+++ b/css/style3.scss
@@ -136,8 +136,8 @@
     display: none;
     position: absolute;
     left: 50%;
-    transform: translate(-50%);
-    top: 50%;
+    transform: translate(-50%, 0%);
+    top: 30%;
 }
 
 .tornado__gyms_slider_link > a {
@@ -298,8 +298,8 @@
 	    display: none;
 	    position: absolute;
 	    left: 50%;
-	    transform: translate(-50%);
-	    top: 50%;
+	    transform: translate(-50%, 0%);
+	    top: 30%;
 	}
 
 	.tornado__gyms_slider_link > a {
