--- a/css/style4.scss
+++ b/css/style4.scss
@@ -1,4 +1,10 @@
 
+
+.my-container{
+	max-width:966px;
+	margin: 0 auto;
+}
+
 /* Top header
 ==============================*/
 
@@ -127,9 +133,196 @@
 	text-align:center;
 	padding: 43px 0px 35px;
 	span{
-		 font-family: "RobotoLight";
-		 font-size: 15px;
-		 color: #292929;
+		font-family: "RobotoLight";
+		font-size: 15px;
+		color: #292929;
+	}
+}
+
+// Хлебные крошки
+.dd-brad-crumps{
+	padding: 18px 0 24px 0px;
+	a{
+		display: inline-block;
+		font-size: 14px;
+		color: #959595;
+		font-family: "RobotoLight";
+		font-style: italic;
+	}
+	span{
+		display: inline-block;
+		font-size: 14px;
+		color: #292929;
+		font-family: "RobotoLight";
+		font-style: italic;
+	}
+	.dd-str{
+		background: url(../img/str.png) no-repeat left center;
+		margin-left: 10px;
+		padding-left: 25px;
+	}
+	a:first-child{
+		margin-left: 0;
+	}
+}
+.dd-page-title{
+	text-align:center;
+	padding-bottom: 32px;
+	span{
+		display: inline-block;
+		font-size: 35px;
+		color: #292929;
+		font-family: "RobotoRegular";
+	}
+}
+.dd-big-img{
+	padding-bottom: 38px;
+	img{
+		margin: 0 auto;
+	}
+}
+.page-txt{
+	padding-bottom: 37px;
+}
+.main-txt{
+	line-height:26px;
+	font-size: 14px;
+	color: #292929;
+	font-family: "RobotoLight";
+}
+.italia{
+	font-style:italic;
+}
+.title-txt{
+	display:inline-block;
+	color: #292929;
+	font-size: 18px;
+	font-family: "RobotoRegular";
+	padding-bottom: 10px;
+}
+.dd-spisok{
+	ul{
+		li:nth-child(1){
+			background: url(../img/one.png) no-repeat left center;
+		}
+		li:nth-child(2){
+			background: url(../img/two.png) no-repeat left center;
+		}
+		li:nth-child(3){
+			background: url(../img/three.png) no-repeat left center;
+		}
+		li:nth-child(4){
+			background: url(../img/four.png) no-repeat left center;
+		}
+	}
+}
+.padding-spisok{
+	padding-left: 29px
+}
+.galka{
+	background: url(../img/galka.png) no-repeat left center;
+}
+.inner-tit{
+	padding-top: 48px;
+	span{
+		font-size: 25px !important;
+	}
+}
+
+// Таблица
+.dd-table{
+	td{
+		width: 190px;
+		height: 35px;
+		// outline: 1px solid red;
+		padding: 11px 8px;
+		font-family: "RobotoRegular";
+		color: #292929;
+		font-size: 15px;
+		display: inline-block;
+		margin-bottom: 4px;	
+	}
+	tr:nth-child(2n+1){
+		td{
+			background: #F0F0EF;
+		}
+	}
+	tr:nth-child(2n+2){
+		td{
+			background: #F8F8F8;
+		}
+	}
+	tr:nth-child(2n+2):hover{
+		td{
+			background: #D5D5D5;
+		}
+	}
+	tr:nth-child(2n+1):hover{
+		td{
+			background: #D5D5D5 !important;
+		}
+	}
+	tr:hover{
+		background: #D5D5D5 !important;
+	}
+}
+
+// Цитата
+.quote{
+	margin: 60px 0px;
+	border-top:2px solid #F0F0EF;
+	border-right:2px solid #F0F0EF;
+	border-bottom:2px solid #F0F0EF;
+	border-left:4px solid #E9E102;
+	padding: 42px 13px 42px 42px;
+	background: #F8F8F8;
+	position:relative;
+}
+.quote:before{
+	content:"";
+	position:absolute;
+	background: url(../img/zap-l.png) no-repeat;
+	width: 13px;
+	height: 13px;
+	left:18px;
+	top:18px;
+}
+.quote:after{
+	content:"";
+	position:absolute;
+	background: url(../img/zap-r.png) no-repeat;
+	width: 13px;
+	height: 13px;
+	bottom:18px;
+	right:18px;
+}
+
+// Текст с картинкой
+.dd-small-img{
+	.img-wrap{
+		img{
+			margin: 0 auto;
+		}
+	}
+}
+.min-title{
+	padding-top: 21px;
+	span{
+		font-family: "RobotoRegular";
+		font-size: 18px;
+		display: inline-block;
+		color: #292929;
+	}
+}
+.pt2{
+	margin-top: 59px;
+	margin-bottom: 42px;
+}
+.dd-new-title{
+	span{
+		font-size: 25px;
+		color:#242424;
+		font-family: "RobotoMedium";
 	}
 }
 
@@ -140,9 +333,23 @@
 }
 
 @media only screen and (min-width : 768px) {
+	.dd-small-img{
+		.img-wrap{
+			float: left;
+			padding-right: 30px;
+			// padding-bottom: 30px;
+			img{
+				margin: 0 auto;
+			}
+		}
+	}
 }
 
 @media only screen and (min-width : 992px) {
+	.my-padding{
+		padding-left: 80px;
+		padding-right: 100px;
+	}
 	.dd-ico{
 		display: none;
 	}
@@ -167,18 +374,23 @@
 		li{
 			display: inline-block;
 			width: unset;
-		// margin: 0 auto;
-		padding-left: 24px;
-		.dd-main-style{
-			padding: 13px 61px 13px 10px;
-			display: inline-block;
+			padding-left: 24px;
+			.dd-main-style{
+				padding: 13px 61px 13px 10px;
+				display: inline-block;
+			}
+			.dd-main-style2{
+				padding: 13px 30px 13px 10px !important;
+				display: inline-block;
+			}
+			.dd-last{
+				padding: 13px 10px 13px 30px;
+			}
 		}
-		.dd-last{
-			padding: 13px 10px 13px 30px;
+		.li2{
+			padding-left: 0px !important;
 		}
 	}
-
-}
 }
 
 @media only screen and (min-width : 1248px) {
