--- a/css/style4.scss
+++ b/css/style4.scss
@@ -29,7 +29,7 @@
 	padding-top: 20px;
 	margin: 0 auto;
 	text-align:center;
-	width: 246px;
+	width: 252px;
 	span{
 		display: inline-block;
 		background: url(../img/call.png) no-repeat left center;
@@ -228,19 +228,28 @@
 		font-size: 25px !important;
 	}
 }
-
+	// @-moz-document url-prefix() {
+	// 	.dd-table{
+	// 		td{
+	// 			border:4px solid red;
+	// 		}
+	// 	}
+	// }
 // Таблица
 .dd-table{
+	// border-collapse: separate;
+	// border-spacing: 4px;
+
 	td{
 		width: 190px;
 		height: 35px;
-		// outline: 1px solid red;
 		padding: 11px 8px;
 		font-family: "RobotoRegular";
 		color: #292929;
 		font-size: 15px;
 		display: inline-block;
-		margin-bottom: 4px;	
+		border:4px solid #fff;
+		// margin-bottom: 4px;
 	}
 	tr:nth-child(2n+1){
 		td{
@@ -266,7 +275,15 @@
 		background: #D5D5D5 !important;
 	}
 }
-
+@-moz-document url-prefix() {
+		.dd-table{
+			td{
+				border:none;
+				margin-bottom: 4px;
+				padding: 8px 8px;
+			}
+		}
+	}
 // Цитата
 .quote{
 	margin: 60px 0px;
