--- a/css/style4.scss
+++ b/css/style4.scss
@@ -53,9 +53,9 @@
 
 // Меню
 .dd-main-menu-wrap{
-	background: url(../img/mbg.jpg) no-repeat top center;
+	background: url(../img/mbg.jpg) no-repeat top center, #272822;
 	width: 100%;
-	background-size: cover;
+	//background-size: cover;
 }
 .ico-wrap{
 	position:relative;
@@ -363,6 +363,11 @@
 }
 
 @media only screen and (min-width : 992px) {
+	.dd-main-menu-wrap{
+		//background: url(../img/mbg.jpg) no-repeat top center, #272822;
+		//width: 100%;
+		background-size: cover;
+	}
 	.my-padding{
 		padding-left: 80px;
 		padding-right: 100px;
